[package]
name = "visa"
version = "0.1.0"
edition = "2021"
description = "A VISA Wrapper which allows concurrent and dynamic switching between visa implementations."
repository = "https://github.com/ajundi/ATE_Cosmere/tree/main/visa"
license = "MIT"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
